2001-10-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-buffer.h: buflen should be an ssize_t not a
	size_t. Thanks to Chanrles for catching this.

2001-10-01  Charles Kerr <charles@rebelbase.com>

	* gmime-filter.c: include <string.h> to pick up memcpy prototype.
	* gmime-stream-mem.c: same.
	* gmime-stream-buffer.c: same.
	* gmime-stream-filter.c: same.

	* gmime-stream-mem.c (stream_flush): added a retval of 0.

	* gmime-filter-crlf.h (g_mime_filter_crlf_new_type): renamed
	prototype as g_mime_filter_crlf_new to sync with .c

	* gmime-part.h: added g_mime_part_set_content_object() prototype.

	* gmime-content-type.h: Replaced <> with "" in #include <gmime-param.h>

	* pan-mime-parser.c: added #include gmime-stream-buffer.h to
	pick up prototype for g_mime_stream_buffer_gets.
	* pan-mime-parser.c (g_strstrbound): removed unused func.

	* gmime-utils.c: on calls to ctype functions, explicitly upcast the
	char arguments as ints to shut up gcc warnings on Solaris.
	* gmime-param.c: same.

2001-09-29  Jeffrey Stedfast  <fejj@ximian.com>

	* pan-mime-parser.c: New parser (with exactly the same API as
	gmime-parser.c) that is meant to parse MIME objects without
	needing them to be memory mapped. Quite a bit slower on average,
	but is vastly sped up by using a GMimeStreamBuffer in BLOCK_READ
	mode.

	* gmime-stream-buffer.c (stream_write): Incremement the stream
	position by the number of bytes we wrote.
	(stream_tell): Return stream->position.
	(stream_substream): Just return a substream of our source stream.
	(g_mime_stream_buffer_gets): Increment the stream position by the
	number of bytes read if and only if we are operating on a buffered
	stream.

2001-09-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-file.c (stream_tell): Return stream->position here
	too.

	* gmime-part.c (g_mime_part_set_pre_encoded_content): Don't decode
	into a stream and then set the data wrapper encoding to the